added 3 additional languages saying goodbye

--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,7 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Bosnian: Zbogom, prijatelji! </li>
+  <li> Khmer: លា, មិត្តភក្តិ! </li>
+  <li> Chinese: 再见，朋友们！</li>
 </ul>
